--- a/about.html
+++ b/about.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>About Us - Jerk Threads</title></head>
+<head>
+    <meta charset="UTF-8">
+    <title>About Us - Jerk Threads</title>
+</head>
 <body>
-<h1>🛠️ About Us – Jerk Threads</h1>
-<p>Built with love. Stitched with purpose.</p>
-<p>She is the beauty. I am the beast. Together, we’re building something loud, loyal, and legendary.</p>
-<p>What started as jerky turned into shirts, but the spirit stayed the same: Raw. Real. Unfiltered.</p>
-<p><strong>👑 Our Story:</strong> She brings the grace. I bring the grit. She brings the heart. I bring the hustle.</p>
-<p><strong>❤️ Mission:</strong> To wear what matters, print what’s real, and honor love, loyalty, and the power of believing in your own story.</p>
-<p><strong>✨ Promise:</strong> If you can dream it, I can make it. Your wish is my command, deary.</p>
-<p><a href="index.html">Return to Home</a></p>
+    <img src="assets/ChatGPT Image Jun 28, 2025, 02_56_12 AM.png" alt="About Us" style="width:100%;">
+    <p><a href="index.html">Return to Home</a></p>
 </body>
 </html>
