--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Contact Us - Jerk Threads</title></head>
+<head>
+    <meta charset="UTF-8">
+    <title>Contact Us - Jerk Threads</title>
+</head>
 <body>
-<h1>Contact Us</h1>
-<p>X: <a href="https://x.com/jerkthreads" target="_blank">@jerkthreads</a></p>
-<p>Instagram: <a href="https://instagram.com/jerkthreads" target="_blank">@jerkthreads</a></p>
-<p>Email: <a href="mailto:jerkthreads@gmail.com">jerkthreads@gmail.com</a></p>
-<p><a href="index.html">Return to Home</a></p>
+    <img src="assets/ChatGPT Image Jun 28, 2025, 02_55_31 AM.png" alt="Contact Us" style="width:100%;">
+    <ul>
+        <li><a href="https://x.com/jerkthreads" target="_blank">@jerkthreads on X</a></li>
+        <li><a href="https://instagram.com/jerkthreads" target="_blank">@jerkthreads on IG</a></li>
+        <li><a href="mailto:jerkthreads@gmail.com">jerkthreads@gmail.com</a></li>
+    </ul>
+    <p><a href="index.html">Return to Home</a></p>
 </body>
 </html>
