--- a/custom.html
+++ b/custom.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Custom Orders - Jerk Threads</title></head>
+<head>
+    <meta charset="UTF-8">
+    <title>Custom Orders - Jerk Threads</title>
+</head>
 <body>
-<h1>Custom Orders</h1>
-<p>Have an idea for a shirt or hoodie? Reach out to us—we’ll make it happen.</p>
-<p><a href="index.html">Return to Home</a></p>
-<p>Thank you for visiting!</p>
+    <img src="assets/ChatGPT Image Jun 28, 2025, 02_55_27 AM.png" alt="Custom Orders" style="width:100%;">
+    <h2>Thank You for Visiting!</h2>
+    <p><a href="index.html">Return to Home</a></p>
 </body>
 </html>
