--- a/index.html
+++ b/index.html
@@ -1,29 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jerk Threads - Home</title>
-  <style>
-    body { margin: 0; font-family: Arial, sans-serif; }
-    header, footer { background: #111; color: white; padding: 1em; text-align: center; }
-    footer a { color: #FFD700; text-decoration: none; margin: 0 10px; }
-    .hero img { width: 100%; height: auto; display: block; }
-  </style>
+    <meta charset="UTF-8">
+    <title>Jerk Threads</title>
 </head>
 <body>
-  <header>
-    <h1>Jerk Threads</h1>
-    <p>Get Custom Threads</p>
-  </header>
-  <div class="hero">
-    <img src="images/homepage.jpg" alt="Homepage Image" />
-  </div>
-  <footer>
-    <a href="about.html">About Us</a> |
-    <a href="contact.html">Contact</a> |
-    <a href="shop.html">Shop</a> |
-    <a href="custom.html">Custom Orders</a>
-  </footer>
+    <img src="assets/ChatGPT Image Jun 28, 2025, 02_56_11 AM.png" alt="Home Page" style="width:100%;">
+    <footer>
+        <p><a href="about.html">About Us</a> | <a href="contact.html">Contact</a> | <a href="shop.html">Shop</a> | <a href="custom.html">Custom Orders</a></p>
+    </footer>
 </body>
 </html>
