--- a/about.html
+++ b/about.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>About Us - Jerk Threads</title>
-</head>
-<body>
-    <img src="assets/ChatGPT Image Jun 28, 2025, 02_56_12 AM.png" alt="About Us" style="width:100%;">
-    <p><a href="index.html">Return to Home</a></p>
-</body>
-</html>
+<html><head><title>about.html</title></head><body>About Us Page Content</body></html>
