--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Contact Us - Jerk Threads</title>
-</head>
-<body>
-    <img src="assets/ChatGPT Image Jun 28, 2025, 02_55_31 AM.png" alt="Contact Us" style="width:100%;">
-    <ul>
-        <li><a href="https://x.com/jerkthreads" target="_blank">@jerkthreads on X</a></li>
-        <li><a href="https://instagram.com/jerkthreads" target="_blank">@jerkthreads on IG</a></li>
-        <li><a href="mailto:jerkthreads@gmail.com">jerkthreads@gmail.com</a></li>
-    </ul>
-    <p><a href="index.html">Return to Home</a></p>
-</body>
-</html>
+<html><head><title>contact.html</title></head><body>Contact Us Page Content</body></html>
