--- a/custom.html
+++ b/custom.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Custom Orders - Jerk Threads</title>
-</head>
-<body>
-    <img src="assets/ChatGPT Image Jun 28, 2025, 02_55_27 AM.png" alt="Custom Orders" style="width:100%;">
-    <h2>Thank You for Visiting!</h2>
-    <p><a href="index.html">Return to Home</a></p>
-</body>
-</html>
+<html><head><title>custom.html</title></head><body>Custom Order Page Content</body></html>
