--- a/shop.html
+++ b/shop.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Shop - Jerk Threads</title>
-</head>
-<body>
-    <img src="assets/ChatGPT Image Jun 28, 2025, 02_55_27 AM.png" alt="Shop Header" style="width:100%;">
-    <div style="display:flex; flex-wrap:wrap;">
-        <img src="assets/ChatGPT Image Jun 28, 2025, 02_55_34 AM.png" style="width:30%; margin:1%;">
-        <img src="assets/ChatGPT Image Jun 28, 2025, 02_55_41 AM.png" style="width:30%; margin:1%;">
-        <img src="assets/ChatGPT Image Jun 28, 2025, 02_55_31 AM.png" style="width:30%; margin:1%;">
-    </div>
-    <p><a href="index.html">Return to Home</a></p>
-</body>
-</html>
+<html><head><title>shop.html</title></head><body>Shop Page Content</body></html>
