--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Jerk Threads</title>
-</head>
-<body>
-    <img src="assets/ChatGPT Image Jun 28, 2025, 02_56_11 AM.png" alt="Home Page" style="width:100%;">
-    <footer>
-        <p><a href="about.html">About Us</a> | <a href="contact.html">Contact</a> | <a href="shop.html">Shop</a> | <a href="custom.html">Custom Orders</a></p>
-    </footer>
-</body>
-</html>
+<html><head><title>index.html</title></head><body>Home Page Content</body></html>
