--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<html><head><title>index.html</title></head><body>Home Page Content</body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Jerk Threads</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <section class="hero">
+    <img src="assets/hero.png" alt="Hero" class="hero-img">
+    <a href="shop.html" class="shop-button">Shop Now</a>
+  </section>
+</body>
+</html>
